networking/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: my-route
  namespace: exercises
spec:
  parentRefs:
  - name: my-gateway
    namespace: exercises
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: log-output-svc
      namespace: exercises
      port: 80

  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: pingpong-svc
      namespace: exercises
      port: 80
